# sql-grimoire

./: .gitignore  Cargo.toml
.sqlx/: query-00cdc94c87bac83e678afd316e3a98d1a22cd850f13aa2cfda8d1c8a62a5c3ad.json  query-068de2ff6ad44f96d83a3d076bd9ecb2b561d0f5bc56bb17c3934fc28527e69f.json  query-1bb179f5070cf8230f9fd84c727082cbce0db1711759f74f613f384e17b59edb.json  query-1e9029638bf89bd35f1f0411724852ed1e6d71eee83efae8a30f8a84d778b412.json  query-2efd7f8e92154a751991dc9a05ab89170f1266dc52ca2277dd80fd0569ca2bcd.json  query-30df5da12158e4555703c3c7962ae3fc23ecf77410f4b6cda3001c99aa28cf16.json  query-36bd87fee5867135fe737282dce25d142b24a7d800f6c442abc7a5dcbc0df118.json  query-3774648440b57fc3a77e6556ef11fef48d9e8e404b64d9313d15933b373f6954.json  query-51b410ede39c68ccbc5ae6354b7f930470df0a443e6728542cc9d06e9962f3a1.json  query-5afcb1a4e578e0e05c5770e60806179a13895120d2f19abc3bacf8f8a0cb24a7.json  query-6d4b3f6e84e0cf16e549195ab5278a3a2e5ee151d7ebbb87bf168ae645178785.json  query-7212edce1bef775d6fd8ac5d954b72b33ceae7c6cd8a171cbc420189414d6adf.json  query-838b6c13e653e67a247c8397ab653d185fe2c7101e4704dca7512eff0faa9a80.json  query-86ac5dd6d7a330d5e586f4f4e9a6d0f9d82e2ae66e0058423e43095b2f438948.json  query-9a51dafc62a051ec19efe517996276c464d202c2a2819d842abb0692c4221106.json  query-b3902e5f78953f93496f80ad495577e97b2f384e98116ba5225dfd9cbedd527d.json  query-bf16096809bce579ec0291aaa4f2dccad9367bc49bb6d5596f1831719b526c94.json  query-d671671d24ceb54514163dd8b77d6891dddb5f94ca27dab2a25853e38658f014.json  query-e1660f5d46a50a76491f05a32fe13608b2775b933d0a7f58f6a959d70fb27cee.json  query-e8069a22e775bbafcf31639d6f32f31d17bfb782d9c995c733b4eb56d9bad698.json  query-ea89b0dd1f0c682b0c118a85a1f1152104584010dc3b520a7ee4d6c1ebdfef66.json  query-f027570e145b44c5917748d7c507ee2e97de8e37cd11b6fd532cf183d66316f0.json
id/: Cargo.toml
id/src/: lib.rs  reexports.rs
migrations/: 20241228124158_create_extension_uuidv7.down.sql  20241228124158_create_extension_uuidv7.up.sql  20241228124359_update_triggers.down.sql  20241228124359_update_triggers.up.sql  20241228124436_exercise_tables.down.sql  20241228124436_exercise_tables.up.sql  20241228135348_users.up.sql  20241228135845_user_solutions.down.sql  20241228135845_user_solutions.up.sql  20250111124215_add_published_at_to_exercise.down.sql  20250111124215_add_published_at_to_exercise.up.sql
observability/: Cargo.toml
observability/src/: config.rs  lib.rs
web/: Cargo.toml  build.rs
web/src/: config.rs  db.rs  error.rs  extractors.rs  main.rs  middlewares.rs  models.rs  partials.rs  routes.rs  setup.rs  state.rs  static_files.rs
web/src/db/: exercise.rs  exercise_solution.rs  user.rs
web/src/models/: exercise.rs  exercise_solution.rs  user.rs
web/src/routes/: admin.rs  exercise_run.rs  health.rs  login.rs  main.rs  serve_static.rs
web/src/routes/admin/: exercise_edit.rs  exercise_schema_edit.rs  exercise_schema_list.rs
web/src/setup/: logging.rs  routes.rs  security.rs
web/static/: main.css  reset.css
web/static/js/: corbado-init.js  corbado-login.js  lucide.js  monaco-init.js  monaco-loader.js  stimulus-init.js
web/static/js/controllers/: db-controller.js  drag-resize-controller.js  editor-controller.js  highlight-controller.js  mermaid-schema-vis-controller.js  monaco-controller.js  schema-hidden-controller.js  simple-editor.js  solution-submit-controller.js  sql-highlight-controller.js  sql-run-controller.js
web/static/js/goatcounter/: init.js
