[package]
name = "sql-grimoire-observability"
edition.workspace = true
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters.workspace = true
eyre.workspace = true
tonic = { version = "0.12", features = ["tls", "tls-webpki-roots", "prost"] }
tracing.workspace = true
tracing-opentelemetry = "0.28"
tracing-tree = "0.4"
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter"] }
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["tokio", "tls"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
url.workspace = true
secrecy.workspace = true
serde.workspace = true
opentelemetry-semantic-conventions = { version = "0.27.0", features = ["semconv_experimental"] }
