[package]
name = "sql-grimoire-observability"
edition.workspace = true
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters.workspace = true
eyre.workspace = true
tracing.workspace = true
tracing-opentelemetry = "0.28"
tracing-tree = "0.4"
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter"] }
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", default-features = false, features = [
    "tokio", "http-proto", "logs", "trace", "reqwest-client", "reqwest-rustls-webpki-roots"
] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
url.workspace = true
secrecy.workspace = true
serde.workspace = true
opentelemetry-semantic-conventions = { version = "0.27.0", features = ["semconv_experimental"] }
