[package]
name = "sql-grimoire-web"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
sql-grimoire-id = { path = "../id" }
sql-grimoire-observability = { path = "../observability" }

apply = "0.3.0"
axum = { version = "0.7.9", features = ["macros"] }
axum_csrf = { version = "0.10.2", features = ["layer"] }
axum-jwt-auth = { version = "0.1.1" }
displaydoc.workspace = true
derive-getters.workspace = true
envy = "0.4.2"
eyre.workspace = true
maud = { version = "0.26.0", features = ["axum"] }
secrecy.workspace = true
serde.workspace = true
serde_json = "1.0.134"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "time", "uuid", "postgres" ] }
thiserror.workspace = true
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "compression-br", "trace", "request-id", "sensitive-headers"] }
tracing.workspace = true
url.workspace = true
uuid.workspace = true
axum-helmet = "0.1.0"
dotenvy = "0.15.7"
static_file_util = "0.1.1"
mime = "0.3.17"
lazy_static = "1.5.0"
time = { version = "0.3.37", features = ["serde"] }
axum-extra = { version = "0.9.6", features = ["cookie"] }
jsonwebtoken = "9.3.0"
pulldown-cmark = "0.12.2"

[build-dependencies]
static_file_util = "0.1.0"
